# smart-commit

./: .pre-commit-hooks.yaml  clabs-smart-commit.py  pyproject.toml
.devcontainer/: devcontainer.json
